# play-iceberg

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
infra/flink/: Dockerfile  README.md  download-jars.sh  flink-conf.yaml  start.sh
infra/spark/: spark-defaults.conf
notebooks/: 1-create_user_table.ipynb  10-select_flink_iceberg.ipynb  2-insert_with_polars.ipynb  2-insert_with_spark.ipynb  3-select_with_duckdb.ipynb  3-select_with_spark.ipynb  4-select_with_spark.ipynb  4-upsert_with_spark.ipynb  5-evolution_with_spark.ipynb  5-upsert_with_spark.ipynb  6-evolution_with_spark.ipynb  6-time_travel_and_rollback.ipynb  7-metadata_inspection.ipynb  7-time_travel_and_rollback.ipynb  8-iceberg_architecture_layers.ipynb  8-metadata_inspection.ipynb  9-iceberg_architecture_layers.ipynb  9-select_flink_iceberg_docker.ipynb
notebooks/archives/: select_with_duckdb.ipynb
