[project]
dependencies = [
    "duckdb>=1.3.1",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pyiceberg>=0.9.1",
    "pyspark==3.5.6",
    "ruff>=0.12.1",
]
description = "Add your description here"
name = "play-iceberg"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"
