[project]
dependencies = [
    "duckdb>=1.3.1",
    "ipykernel>=6.29.5",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pyiceberg>=0.9.1",
    "pyspark==3.5.6",
    "requests>=2.32.4",
    "ruff>=0.12.1",
    "setuptools>=80.0.0,<81.0.0",
    "tqdm>=4.67.1",
]
description = "Add your description here"
name = "play_iceberg"
readme = "README.md"
requires-python = ">=3.11,<3.12"
version = "0.1.0"
