[project]
dependencies = [
    "duckdb>=1.3.1",
    "duckdb-engine>=0.17.0",
    "ipykernel>=6.29.5",
    "jupysql>=0.11.1",
    "matplotlib>=3.10.3",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pyarrow>=8.0.0,<12.0.0",
    "pyiceberg>=0.9.1",
    "pyspark==3.5.6",
    "requests>=2.32.4",
    "ruff>=0.12.1",
    "setuptools>=80.0.0,<81.0.0",
    "toml>=0.10.2",
]
description = "Apache Iceberg playground with Flink, Spark, and DuckDB"
name = "play_iceberg"
readme = "README.md"
requires-python = ">=3.11,<3.12"
version = "0.1.0"

    [project.optional-dependencies]
    flink = [
        "apache-flink==1.20.1",
    ]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.0",
    "wheel",
]

[tool.setuptools]
packages = [
] # This tells setuptools this is not a package, just a project with dependencies
